--- a/data-tool/notebooks/legacy_corps_migration_pre_screening/migration_pre_screening.ipynb
+++ b/data-tool/notebooks/legacy_corps_migration_pre_screening/migration_pre_screening.ipynb
@@ -62,19 +62,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "e2d50502",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "881\n",
-      "300\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "corps_pre_screening_query = f\"\"\"\n",
     "select\n",
@@ -95,7 +86,6 @@
     "    ar_unfiled_over_1yr,\n",
     "    file_cnt_last_2yrs,\n",
     "    last_file_event_ts,\n",
-    "    last_event_ts,\n",
     "    event_file_types,\n",
     "    has_officers,\n",
     "    has_3rd_party,\n",
@@ -109,25 +99,34 @@
     "    is_frozen\n",
     "from mv_legacy_corps_data\n",
     "where 1 = 1\n",
-    "    and group_name = 'Early Adopters'\n",
-    "    and migrated = false\n",
-    "    and is_active = true\n",
-    "    and is_frozen = false\n",
-    "    and meets_main_criteria = true\n",
-    "    and has_3rd_party = false\n",
-    "\tand email_domain = 'mcmillan.ca'\n",
+    "    and corp_num in ('BC1000158','BC1113747','BC0968587','BC1279124','BC1101747','BC1101782','BC1101754','BC1457507',\n",
+    "    'BC1457472','BC1457468','BC1341761','BC1124231','BC0867774','BC0818117','BC0984688','BC0926240','BC1021743',\n",
+    "    'BC1023267','BC1101781','BC1063429','BC1101760','BC1101756','BC1101793','BC1101790','BC1101784','BC1101777',\n",
+    "    'BC1101774','BC1101771','BC1101779','BC1101746','BC1101788','BC1235739','BC1235742','BC1281425','BC1340203',\n",
+    "    'BC1524599','BC1543071','BC1487014','BC1509768','BC1000965','BC1145027','BC1023877','BC1155501','BC1036694',\n",
+    "    'BC1113308','BC1246338','BC1194740','BC1143575','BC1210015','BC1277546','BC1376919','BC1437993','BC1503663',\n",
+    "    'BC1437992','BC1504129','BC1531296','BC1528645','BC1098507','BC1191586','BC1234966','BC1191589','BC1138880')\n",
     ";\n",
     "\"\"\"\n",
     "\n",
-    "df_pre_screening = pd.read_sql(corps_pre_screening_query, engine)\n",
-    "print(len(df_pre_screening))\n",
+    "all_corps = pd.read_sql(corps_pre_screening_query, engine)\n",
+    "# filter rows where has_officers is False and meets_main_criteria is True\n",
+    "corps_has_officers = all_corps.query(\"has_officers == True\")\n",
+    "corps_do_not_meets_criteria = all_corps.query(\"meets_main_criteria == False\")\n",
+    "corps_null_group_name = all_corps.query(\"group_name.isnull()\")\n",
+    "corps_migrated = all_corps.query(\"migrated == True\")\n",
+    "corps_all_address_issues = all_corps.query(\"address_all_any_bad_count > 0\")\n",
+    "corps_all_office_issues = all_corps.query(\"office_all_any_bad_count > 0\")\n",
+    "corps_all_party_issues = all_corps.query(\"party_all_any_bad_count > 0\")\n",
     "\n",
-    "additional_filter = \"and has_officers = false\"\n",
-    "\n",
-    "new_query = corps_pre_screening_query.rstrip().rstrip(';') + \"\\n    \" + additional_filter + \"\\n;\"\n",
-    "\n",
-    "df_pre_screening = pd.read_sql(new_query, engine)\n",
-    "print(len(df_pre_screening))\n"
+    "print('All corps:', len(all_corps))\n",
+    "print('Has officers:', len(corps_has_officers))\n",
+    "print('Does not meet criteria:', len(corps_do_not_meets_criteria))\n",
+    "print('Null group name:', len(corps_null_group_name))\n",
+    "print('Migrated:', len(corps_migrated))\n",
+    "print('All address issues:', len(corps_all_address_issues))\n",
+    "print('All office issues:', len(corps_all_office_issues))\n",
+    "print('All party issues:', len(corps_all_party_issues))"
    ]
   }
  ],
