--- a/jobs/correction-ben-statement/add_registrars_notation_historical.ipynb
+++ b/jobs/correction-ben-statement/add_registrars_notation_historical.ipynb
@@ -26,8 +26,7 @@
    "source": [
     "import os\n",
     "from dotenv import load_dotenv, find_dotenv\n",
-    "import psycopg2\n",
-    "import pandas as pd\n",
+    "from sqlalchemy import create_engine, text\n",
     "\n",
     "# this will load all the envars from a .env file located in the project root (api)\n",
     "load_dotenv(find_dotenv())\n",
@@ -45,9 +44,11 @@
     "                os.getenv('ENTITY_DATABASE_USERNAME', '') + \":\" + os.getenv('ENTITY_DATABASE_PASSWORD', '') +'@' + \\\n",
     "                os.getenv('ENTITY_DATABASE_HOST', '') + ':' + os.getenv('ENTITY_DATABASE_PORT', '5434') + '/' + \\\n",
     "                os.getenv('ENTITY_DATABASE_NAME', '');\n",
-    "connect_to_db\n",
-    "    \n",
-    "%sql $connect_to_db"
+    "engine = create_engine(connect_to_db)\n",
+    "\n",
+    "# Test connection\n",
+    "with engine.connect() as conn:\n",
+    "    print(\"Connected successfully!\")"
    ]
   },
   {
@@ -121,41 +122,42 @@
     "skipped_identifiers = []\n",
     "\n",
     "# loop through list of businesses to create filing\n",
-    "for identifier in businesses:    \n",
-    "    filing_data = {\n",
-    "        \"filing\": {\n",
-    "            \"header\": {\n",
-    "                \"name\": \"registrarsNotation\",\n",
-    "                \"date\": current_date,\n",
-    "                \"certifiedBy\": \"system\"\n",
-    "            },\n",
-    "            \"business\": {\n",
-    "                \"identifier\": identifier,\n",
-    "                \"legalType\": \"BEN\"\n",
-    "            },\n",
-    "            \"registrarsNotation\": {\n",
-    "                \"orderDetails\": \"BC benefit company statement contained in notice of articles as required under \" + \n",
-    "                \"section 51.992 of the Business Corporations Act corrected from \" +\n",
-    "                \"\\\"This company is a benefit company and, as such, has purposes that include conducting its business \" +\n",
-    "                \" in a responsible and sustainable manner and promoting one or more public benefits\\\" to \" + \n",
-    "                \"\\\"This company is a benefit company and, as such, is committed to conducting its business in a \" + \n",
-    "                \"responsible and sustainable manner and promoting one or more public benefits\\\".\"\n",
+    "with engine.connect() as conn:\n",
+    "    for identifier in businesses:    \n",
+    "        filing_data = {\n",
+    "            \"filing\": {\n",
+    "                \"header\": {\n",
+    "                    \"name\": \"registrarsNotation\",\n",
+    "                    \"date\": current_date,\n",
+    "                    \"certifiedBy\": \"system\"\n",
+    "                },\n",
+    "                \"business\": {\n",
+    "                    \"identifier\": identifier,\n",
+    "                    \"legalType\": \"BEN\"\n",
+    "                },\n",
+    "                \"registrarsNotation\": {\n",
+    "                    \"orderDetails\": \"BC benefit company statement contained in notice of articles as required under \" + \n",
+    "                    \"section 51.992 of the Business Corporations Act corrected from \" +\n",
+    "                    \"\\\"This company is a benefit company and, as such, has purposes that include conducting its business \" +\n",
+    "                    \" in a responsible and sustainable manner and promoting one or more public benefits\\\" to \" + \n",
+    "                    \"\\\"This company is a benefit company and, as such, is committed to conducting its business in a \" + \n",
+    "                    \"responsible and sustainable manner and promoting one or more public benefits\\\".\"\n",
+    "                }\n",
     "            }\n",
     "        }\n",
-    "    }\n",
     "\n",
-    "    filing_url = urljoin(base_url, f\"/api/v2/businesses/{identifier}/filings\")\n",
-    "    response = requests.post(filing_url, headers=headers, json=filing_data)\n",
+    "        filing_url = urljoin(base_url, f\"/api/v2/businesses/{identifier}/filings\")\n",
+    "        response = requests.post(filing_url, headers=headers, json=filing_data)\n",
     "\n",
-    "    # Check the status code of the response\n",
-    "    if response.status_code == 201:\n",
-    "        successful_identifiers.append(identifier)\n",
-    "    else:\n",
-    "        failed_identifiers.append(identifier)\n",
-    "        print(f\"Failed to make POST request. Status code: {response.status_code} for {identifier}\")\n",
-    "print('Successfully filed Registrar Notation for:', successful_identifiers) # Print the successful identifiers\n",
-    "print('Failed to file Registrar Notation for:', failed_identifiers) # Print the failed identifiers\n",
-    "print('Skipped to file Registrar Notation for:', skipped_identifiers) # Print the skipped identifiers\n"
+    "        # Check the status code of the response\n",
+    "        if response.status_code == 201:\n",
+    "            successful_identifiers.append(identifier)\n",
+    "        else:\n",
+    "            failed_identifiers.append(identifier)\n",
+    "            print(f\"Failed to make POST request. Status code: {response.status_code} for {identifier}\")\n",
+    "    print('Successfully filed Registrar Notation for:', successful_identifiers) # Print the successful identifiers\n",
+    "    print('Failed to file Registrar Notation for:', failed_identifiers) # Print the failed identifiers\n",
+    "    print('Skipped to file Registrar Notation for:', skipped_identifiers) # Print the skipped identifiers\n"
    ]
   }
  ],
