pre screening notebook

--- a/data-tool/notebooks/legacy_corps_pre_screening/migration_pre_screening.ipynb
+++ b/data-tool/notebooks/legacy_corps_pre_screening/migration_pre_screening.ipynb
@@ -2,47 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "61bc1986",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: pandas in /home/kdeodhar/repos/lear/data-tool/venv-prefect/lib/python3.11/site-packages (3.0.1)\n",
-      "Requirement already satisfied: numpy>=1.26.0 in /home/kdeodhar/repos/lear/data-tool/venv-prefect/lib/python3.11/site-packages (from pandas) (2.4.2)\n",
-      "Requirement already satisfied: python-dateutil>=2.8.2 in /home/kdeodhar/repos/lear/data-tool/venv-prefect/lib/python3.11/site-packages (from pandas) (2.9.0.post0)\n",
-      "Requirement already satisfied: six>=1.5 in /home/kdeodhar/repos/lear/data-tool/venv-prefect/lib/python3.11/site-packages (from python-dateutil>=2.8.2->pandas) (1.17.0)\n",
-      "Note: you may need to restart the kernel to use updated packages.\n",
-      "Note: you may need to restart the kernel to use updated packages.\n",
-      "Requirement already satisfied: oracledb in /home/kdeodhar/repos/lear/data-tool/venv-prefect/lib/python3.11/site-packages (3.4.2)\n",
-      "Requirement already satisfied: cryptography>=3.2.1 in /home/kdeodhar/repos/lear/data-tool/venv-prefect/lib/python3.11/site-packages (from oracledb) (46.0.5)\n",
-      "Requirement already satisfied: typing_extensions>=4.14.0 in /home/kdeodhar/repos/lear/data-tool/venv-prefect/lib/python3.11/site-packages (from oracledb) (4.15.0)\n",
-      "Requirement already satisfied: cffi>=2.0.0 in /home/kdeodhar/repos/lear/data-tool/venv-prefect/lib/python3.11/site-packages (from cryptography>=3.2.1->oracledb) (2.0.0)\n",
-      "Requirement already satisfied: pycparser in /home/kdeodhar/repos/lear/data-tool/venv-prefect/lib/python3.11/site-packages (from cffi>=2.0.0->cryptography>=3.2.1->oracledb) (3.0)\n",
-      "Note: you may need to restart the kernel to use updated packages.\n",
-      "Requirement already satisfied: dotenv in /home/kdeodhar/repos/lear/data-tool/venv-prefect/lib/python3.11/site-packages (0.9.9)\n",
-      "Requirement already satisfied: python-dotenv in /home/kdeodhar/repos/lear/data-tool/venv-prefect/lib/python3.11/site-packages (from dotenv) (1.2.1)\n",
-      "Note: you may need to restart the kernel to use updated packages.\n",
-      "Requirement already satisfied: psycopg2-binary in /home/kdeodhar/repos/lear/data-tool/venv-prefect/lib/python3.11/site-packages (2.9.11)\n",
-      "Note: you may need to restart the kernel to use updated packages.\n",
-      "Requirement already satisfied: openpyxl in /home/kdeodhar/repos/lear/data-tool/venv-prefect/lib/python3.11/site-packages (3.1.5)\n",
-      "Requirement already satisfied: et-xmlfile in /home/kdeodhar/repos/lear/data-tool/venv-prefect/lib/python3.11/site-packages (from openpyxl) (2.0.0)\n",
-      "Note: you may need to restart the kernel to use updated packages.\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from dotenv import load_dotenv\n",
     "\n",
@@ -58,18 +21,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "54bf1552",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Connected to: postgresql://postgres:***@localhost:5434/colin-mig-corps-test\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from sqlalchemy import create_engine\n",
     "import os\n",
@@ -88,26 +43,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "1b6a718e",
+   "metadata": {},
+   "source": [
+    "This is for regular migration batches"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "4f263010",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "All corps: 62\n",
-      "Has officers: 8\n",
-      "Does not meet criteria: 3\n",
-      "Null group name: 1\n",
-      "Migrated: 58\n",
-      "All address issues: 2\n",
-      "All office issues: 0\n",
-      "All party issues: 2\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "corps_pre_screening_query = f\"\"\"\n",
     "select\n",
@@ -152,8 +100,6 @@
     "\"\"\"\n",
     "\n",
     "all_corps = pd.read_sql(corps_pre_screening_query, engine)\n",
-    "df = pd.DataFrame(all_corps)\n",
-    "df\n",
     "# filter rows where has_officers is False and meets_main_criteria is True\n",
     "corps_has_officers = all_corps.query(\"has_officers == True\")\n",
     "corps_do_not_meets_criteria = all_corps.query(\"meets_main_criteria == False\")\n",
@@ -224,7 +170,6 @@
     "  and is_active = true\n",
     "  and is_frozen = false\n",
     "  and migrated = false\n",
-    "  and has_officers = true\n",
     "  and meets_main_criteria = true\n",
     "  and has_3rd_party = false\n",
     "  and email_used_count = 1\n",
@@ -233,14 +178,25 @@
     "  and bar_account_id is not null\n",
     "  and address_all_any_bad_count = 0\n",
     "  and meets_share_criteria = true\n",
+    "order by\n",
+    "  months_since_last_bar_filing, -- this order by will prioritize businesses that will need to file an AR within next few months\n",
+    "  corp_num desc\n",
     ";\n",
     "\"\"\"\n",
     "\n",
     "all_corps = pd.read_sql(bar_corps_pre_screening_query, engine)\n",
+    "# print corp_num for all corps\n",
+    "all_corps_corp_nums = all_corps['corp_num'].tolist()\n",
+    "print(\"All corp nums:\", all_corps_corp_nums)\n",
     "\n",
-    "df = pd.DataFrame(all_corps)\n",
-    "# filter rows where has_officers is False and meets_main_criteria is True\n",
+    "corps_no_officers = all_corps.query(\"has_officers == False\")\n",
+    "corps_no_officers_corp_nums = corps_no_officers['corp_num'].tolist()\n",
+    "print(\"Corps with no officers:\", corps_no_officers_corp_nums)\n",
+    "\n",
     "corps_has_officers = all_corps.query(\"has_officers == True\")\n",
+    "corps_has_officers_corp_nums = corps_has_officers['corp_num'].tolist()\n",
+    "print(\"Corps with officers:\", corps_has_officers_corp_nums)\n",
+    "\n",
     "corps_do_not_meets_criteria = all_corps.query(\"meets_main_criteria == False\")\n",
     "corps_null_group_name = all_corps.query(\"group_name.isnull()\")\n",
     "corps_migrated = all_corps.query(\"migrated == True\")\n",
@@ -249,6 +205,7 @@
     "corps_all_party_issues = all_corps.query(\"party_all_any_bad_count > 0\")\n",
     "\n",
     "print('All corps:', len(all_corps))\n",
+    "print('No officers:', len(corps_no_officers))\n",
     "print('Has officers:', len(corps_has_officers))\n",
     "print('Does not meet criteria:', len(corps_do_not_meets_criteria))\n",
     "print('Null group name:', len(corps_null_group_name))\n",
